--- a/src/app/expense/expense-tracker/expense-tracker.css
+++ b/src/app/expense/expense-tracker/expense-tracker.css
@@ -41,10 +41,10 @@
   padding: 1rem;
 }
 
-.card-one {
+.nocard-one {
   width: 100%;
 }
-.card-two {
+.nocard-two {
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
@@ -66,4 +66,8 @@
 
 .loadingImage {
   width: 20%;
+}
+
+.noDataImage {
+  width: 70%;
 }
